cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template__deepseek-chat__row_35_update_7_template_20250506_102005.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation template for MySQL RDS instance with VPC networking'

Parameters:
  DBUsername:
    Description: 'Username for MySQL database access'
    Type: String
    MinLength: 1
    MaxLength: 16
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    NoEcho: true

  DBName:
    Description: 'Name of the initial database'
    Type: String
    Default: 'mydb'
    MinLength: 1
    MaxLength: 64
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'

  DBAllocatedStorage:
    Description: 'The size of the database (GiB)'
    Type: Number
    Default: 20
    MinValue: 20
    MaxValue: 100

  DBBackupRetentionPeriod:
    Description: 'Number of days to retain automated backups'
    Type: Number
    Default: 7
    MinValue: 0
    MaxValue: 35

Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: 'Name'
          Value: 'RDS-VPC'

  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: 'Name'
          Value: 'RDS-IGW'

  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: '10.0.1.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'Name'
          Value: 'PublicSubnet-AZ1'

  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: '10.0.2.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'Name'
          Value: 'PublicSubnet-AZ2'

  RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: 'Name'
          Value: 'PublicRouteTable'

  Route:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref RouteTable

  SubnetRouteTableAssociation2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref RouteTable

  RDSSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Security group for RDS MySQL instance'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: 3306
          ToPort: 3306
          CidrIp: '0.0.0.0/0'

  DBSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: 'Subnet group for RDS instance'
      SubnetIds:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Tags:
        - Key: 'Name'
          Value: 'RDS-Subnet-Group'

  RDSSecret:
    Type: 'AWS::SecretsManager::Secret'
    Properties:
      Name: !Sub 'rds-credentials-${AWS::StackName}'
      Description: 'Secret for RDS MySQL instance'
      GenerateSecretString:
        SecretStringTemplate: !Sub '{"username": "${DBUsername}"}'
        GenerateStringKey: 'password'
        PasswordLength: 16
        ExcludeCharacters: '"@/\'

  MySQLDB:
    Type: 'AWS::RDS::DBInstance'
    Properties:
      Engine: 'mysql'
      EngineVersion: '8.0.40'
      DBInstanceClass: 'db.t3.micro'
      AllocatedStorage: !Ref DBAllocatedStorage
      StorageType: 'gp2'
      DBName: !Ref DBName
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Sub '{{resolve:secretsmanager:${RDSSecret}:SecretString:password}}'
      BackupRetentionPeriod: !Ref DBBackupRetentionPeriod
      MultiAZ: false
      PubliclyAccessible: false
      VPCSecurityGroups:
        - !GetAtt RDSSecurityGroup.GroupId
      DBSubnetGroupName: !Ref DBSubnetGroup
      Tags:
        - Key: 'Name'
          Value: 'MySQL-RDS-Instance'

Outputs:
  DBEndpoint:
    Description: 'Connection endpoint for the database'
    Value: !GetAtt MySQLDB.Endpoint.Address

  VPCId:
    Description: 'VPC ID'
    Value: !Ref VPC

  SecurityGroupId:
    Description: 'Security Group ID for RDS access'
    Value: !GetAtt RDSSecurityGroup.GroupId

  SecretARN:
    Description: 'ARN of the RDS secret'
    Value: !Ref RDSSecret
